--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frontend Series - The Coders Club</title>
+    <title>Frontend Development Series - The Coders Club</title>
     <link rel="icon" href="TCC.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -446,13 +446,13 @@ Every week, we'll immerse ourselves in these key technologies, progressively sha
                         <tr>
                             <td>DSA Series</td>
                             <td>July - September 2025</td>
-                            <td><a href="https://thecodersclub-mce.github.io/frontend" target="_blank">Go to Series</a></td>
+                            <td><a href="https://thecodersclub-mce.github.io/dsa" target="_blank">Go to Series</a></td>
                             <td>Completed</td>
                         </tr>
                         <tr>
-                            <td>Frontend Series</td>
+                            <td>Frontend Development</td>
                             <td>October - November 2025</td>
-	                <td><a href="https://thecodersclub-mce.github.io/frontend" target="_blank" class="current-status-highlight">Currently Open</a></td>
+	                <td><a href="https://thecodersclub-mce.github.io/frontend-development" target="_blank" class="current-status-highlight">Currently Open</a></td>
                             <td>Ongoing</td>
                         </tr>
                         <tr>
@@ -536,4 +536,5 @@ Every week, we'll immerse ourselves in these key technologies, progressively sha
         });
     </script>
 </body>
+
 </html>
