--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
     <div class="content-container-wrapper">
         <h2 style="color: #00408f; text-align: center; margin-bottom: 20px; font-size: 2em;">
-            Frontend Series: Your Journey to Coding Mastery!
+            Frontend Development Series: Your Journey to Coding Mastery!
         </h2>
         <p>Welcome to The Coders Club's intensive HTML, CSS, and JavaScript Frontend Series! This program is expertly crafted to elevate your skills from foundational web structure (HTML) and styling (CSS) to complex client-side behavior (JavaScript), ensuring you gain a profound mastery of the web's building blocks.
 
@@ -538,3 +538,4 @@ Every week, we'll immerse ourselves in these key technologies, progressively sha
 </body>
 
 </html>
+
