--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <h2 style="color: #00408f; text-align: center; margin-bottom: 20px; font-size: 2em;">
             Frontend Development Series: Your Journey to Coding Mastery!
         </h2>
-        <p>Welcome to The Coders Club's intensive HTML, CSS, and JavaScript Frontend Series! This program is expertly crafted to elevate your skills from foundational web structure (HTML) and styling (CSS) to complex client-side behavior (JavaScript), ensuring you gain a profound mastery of the web's building blocks.
+        <p>Welcome to The Coders Club's intensive HTML, CSS, and JavaScript Frontend Development Series! This program is expertly crafted to elevate your skills from foundational web structure (HTML) and styling (CSS) to complex client-side behavior (JavaScript), ensuring you gain a profound mastery of the web's building blocks.
 
 Every week, we'll immerse ourselves in these key technologies, progressively sharpening your ability to build functional, interactive, and beautifully designed websites from the ground up.</p>
 
@@ -538,4 +538,5 @@ Every week, we'll immerse ourselves in these key technologies, progressively sha
 </body>
 
 </html>
+
 
