--- a/feedback.html
+++ b/feedback.html
@@ -326,8 +326,8 @@
     <div class="button-container">
         <button class="b-nav-button" onclick="window.location.href='index.html';">Home</button>
         <button class="b-nav-button" onclick="window.location.href='weeklycontent.html';">Weekly Content</button>
-        <button class="b-nav-button" onclick="window.location.href='quiz.html';">Brain Cache</button>
-        <button class="b-nav-button" onclick="window.location.href='finalquiz.html';">Mindmash</button>
+        <button class="b-nav-button" onclick="window.location.href='brain-cache.html';">Brain Cache</button>
+        <button class="b-nav-button" onclick="window.location.href='mindmash.html';">Mindmash</button>
         <button class="b-nav-button" onclick="window.location.href='leaderboard.html';">Leaderboard</button>
         <button class="b-nav-button active-nav-button" onclick="window.location.href='feedback.html';">Feedback</button>
     </div>
