Update and rename finalquiz.html to mindmash.html

--- a/mindmash.html
+++ b/mindmash.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mindmash - Frontend Series</title>
+<title>Mindmash - Frontend Development Series</title>
 <link rel="icon" href="TCC.png" type="image/png">
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -484,8 +484,8 @@ pre code {
 <div class="button-container">
 <button class="b-nav-button" onclick="window.location.href='index.html';">Home</button>
 <button class="b-nav-button" onclick="window.location.href='weeklycontent.html';">Weekly Content</button>
-<button class="b-nav-button active-nav-button" onclick="window.location.href='quiz.html';">Brain Cache</button>
-<button class="b-nav-button" onclick="window.location.href='finalquiz.html';">Mindmash</button>
+<button class="b-nav-button" onclick="window.location.href='brain-cache.html';">Brain Cache</button>
+<button class="b-nav-button active-nav-button" onclick="window.location.href='mindmash.html';">Mindmash</button>
 <button class="b-nav-button" onclick="window.location.href='leaderboard.html';">Leaderboard</button>
 <button class="b-nav-button" onclick="window.location.href='feedback.html';">Feedback</button>
 </div>
@@ -808,7 +808,7 @@ pre code {
 <img src="WP.svg" alt="WhatsApp" class="social-logo">
 </a>
 </footer>
-<script src="finalquiz.js"></script>
+<script src="mindmash.js"></script>
 </body>
 
 </html>
