--- a/leaderboard.html
+++ b/leaderboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaderboard - Frontend Series</title>
+    <title>Leaderboard - Frontend Development Series</title>
     <link rel="icon" href="TCC.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -260,8 +260,8 @@
     <div class="button-container">
         <button class="b-nav-button" onclick="window.location.href='index.html';">Home</button>
         <button class="b-nav-button" onclick="window.location.href='weeklycontent.html';">Weekly Content</button>
-        <button class="b-nav-button" onclick="window.location.href='quiz.html';">Brain Cache</button>
-        <button class="b-nav-button" onclick="window.location.href='finalquiz.html';">Mindmash</button>
+        <button class="b-nav-button" onclick="window.location.href='brain-cache.html';">Brain Cache</button>
+        <button class="b-nav-button" onclick="window.location.href='mindmash.html';">Mindmash</button>
         <button class="b-nav-button active-nav-button" onclick="window.location.href='leaderboard.html';">Leaderboard</button>
         <button class="b-nav-button" onclick="window.location.href='feedback.html';">Feedback</button>
     </div>
