--- a/weeklycontent.html
+++ b/weeklycontent.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weekly Content Frontend Series - The Coders Club</title>
+    <title>Weekly Content Frontend Development Series - The Coders Club</title>
     <link rel="icon" href="TCC.png" type="image/png">
     <link rel="stylesheet" href="styles.css"> 
     <style>
@@ -759,8 +759,8 @@ pre code {
     <div class="button-container">
         <button class="b-nav-button" onclick="window.location.href='index.html';">Home</button>
         <button class="b-nav-button active-nav-button" onclick="window.location.href='weeklycontent.html';">Weekly Content</button>
-        <button class="b-nav-button" onclick="window.location.href='quiz.html';">Brain Cache</button>
-        <button class="b-nav-button" onclick="window.location.href='finalquiz.html';">Mindmash</button>
+        <button class="b-nav-button" onclick="window.location.href='brain-cache.html';">Brain Cache</button>
+        <button class="b-nav-button" onclick="window.location.href='mindmash.html';">Mindmash</button>
         <button class="b-nav-button" onclick="window.location.href='leaderboard.html';">Leaderboard</button>
         <button class="b-nav-button" onclick="window.location.href='feedback.html';">Feedback</button>
     </div>
