--- a/weeklycontent.html
+++ b/weeklycontent.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weekly Content Frontend Development Series - The Coders Club</title>
+    <title>Weekly Content Frontend Series - The Coders Club</title>
     <link rel="icon" href="TCC.png" type="image/png">
     <link rel="stylesheet" href="styles.css"> 
     <style>
@@ -759,8 +759,8 @@ pre code {
     <div class="button-container">
         <button class="b-nav-button" onclick="window.location.href='index.html';">Home</button>
         <button class="b-nav-button active-nav-button" onclick="window.location.href='weeklycontent.html';">Weekly Content</button>
-        <button class="b-nav-button" onclick="window.location.href='brain-cache.html';">Brain Cache</button>
-        <button class="b-nav-button" onclick="window.location.href='mindmash.html';">Mindmash</button>
+        <button class="b-nav-button" onclick="window.location.href='quiz.html';">Brain Cache</button>
+        <button class="b-nav-button" onclick="window.location.href='finalquiz.html';">Mindmash</button>
         <button class="b-nav-button" onclick="window.location.href='leaderboard.html';">Leaderboard</button>
         <button class="b-nav-button" onclick="window.location.href='feedback.html';">Feedback</button>
     </div>
@@ -4199,13 +4199,13 @@ let disabledWeekId = null; // Changed from 'null' to null to ensure no week is d
 // Define an array of disabled days for a given week (e.g., ['tuesday', 'thursday'] for week1)
 const disabledDays = {
     // Uncomment these lines and specify days if you want to disable specific days within weeks
-    // 'week1': [], // Example: No disabled days for Week 1
-    // 'week2': [],
-    // 'week3': [],
-    // 'week4': [],
-    // 'week5': [],
-    // 'week6': [],
-    // 'week7': [], // Mindmash - no disabled days here for now
+    'week1': ['monday','tuesday','wednesday','thursday','friday','saturday'], // Example: No disabled days for Week 1
+    'week2': ['monday','tuesday','wednesday','thursday','friday','saturday'],
+    'week3': ['monday','tuesday','wednesday','thursday','friday','saturday'],
+    'week4': ['monday','tuesday','wednesday','thursday','friday','saturday'],
+    'week5': ['monday','tuesday','wednesday','thursday','friday','saturday'],
+    'week6': ['monday','tuesday','wednesday','thursday','friday'],
+    'week10': ['monday'], // Mindmash - no disabled days here for now
 };
 // --- END CONTROL KEYWORD ---
 
