--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ Every week, we'll immerse ourselves in these key technologies, progressively sha
                             <td>Frontend Development</td>
                             <td>October - November 2025</td>
 	                <td><a href="https://thecodersclub-mce.github.io/frontend-development" target="_blank" class="current-status-highlight">Currently Open</a></td>
-                            <td>Ongoing</td>
+                            <td>Completed</td>
                         </tr>
                         <tr>
                             <td>Database</td>
@@ -538,6 +538,7 @@ Every week, we'll immerse ourselves in these key technologies, progressively sha
 </body>
 
 </html>
+
 
 
 
